--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prettier": "prettier",
     "embedme": "embedme blog-posts/**/*.md",
-    "prettier:base": "yarn run prettier \"**/*.{js,json,scss,md,ts,html,component.html}\"",
+    "prettier:base": "yarn run prettier \"**/*.{js,json,scss,ts,html,component.html}\"",
     "prettier:write": "yarn run prettier:base --write",
     "prettier:check": "yarn run prettier:base --list-different",
     "embedme:check": "yarn run embedme --verify",
